--- a/404.html
+++ b/404.html
@@ -132,13 +132,13 @@
 
     <!-- ================> 404 section start here <================== -->
     <section class="error padding-top padding-bottom">
-        <div class="container">
+        <div class="container" data-aos="zoom-in" data-aos-duration="800">
             <div class="section-header text-center ">
                 <h2>OOPS!</h2>
                 <p class="style2">Page not found</p>
             </div>
         </div>
-        <div class="error__inner">
+        <div class="error__inner" data-aos="fade-up" data-aos-duration="800">
             <div class="error__content text-center">
                 <img class=" mb-4" src="assets/images/others/404.png" alt="404 image">
                 <div class="text-center mt-5">
