--- a/about.html
+++ b/about.html
@@ -131,7 +131,7 @@
             <div class="about__wrapper">
                 <div class="row g-5 align-items-center">
                     <div class="col-lg-7 col-md-8">
-                        <div class="about__content">
+                        <div class="about__content" data-aos="fade-right" data-aos-duration="800">
                             <div class="section-header">
                                 <div class="subtitle subtitle--style4">
                                     <p class="mb-0">who we are</p>
@@ -197,7 +197,7 @@
             </div>
             <div class="feature__wrapper">
                 <div class="row g-4">
-                    <div class="col-lg-4 col-md-4">
+                    <div class="col-md-4 col-sm-6" data-aos="fade-up" data-aos-duration="600">
                         <div class="feature__item">
                             <div class="feature__item-inner">
                                 <div class="feature__thumb">
@@ -211,21 +211,21 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-4">
+                    <div class="col-md-4 col-sm-6" data-aos="fade-up" data-aos-duration="800">
                         <div class="feature__item">
                             <div class="feature__item-inner">
                                 <div class="feature__thumb">
                                     <img src="assets/images/about/home1/4.png" alt="feature-image">
                                 </div>
                                 <div class="feature__content">
-                                    <h5>Expert Creator</h5>
+                                    <h5>Our Expert Creator</h5>
                                     <p class="mb-0">The standard chunk of Lorem Ipsum used since the 1500s is reproduced
                                         below.</p>
                                 </div>
-                            </div>
+                            </div> 
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-4">
+                    <div class="col-md-4 col-sm-6" data-aos="fade-up" data-aos-duration="1000">
                         <div class="feature__item">
                             <div class="feature__item-inner">
                                 <div class="feature__thumb">
@@ -242,21 +242,20 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> 
     <!-- ===============>> feature section end here <<================= -->
 
 
     <!-- ===============>> Popular course section start here <<================= -->
-    <section class="course course--style1 padding-top padding-bottom brand-1" data-aos="fade-up"
-        data-aos-duration="800">
-        <div class="container-fluid px-md-0">
-            <div class="section-header text-center section-header--dark">
+    <section class="course course--style1 padding-top padding-bottom brand-1">
+        <div class="container-fluid px-lg-0">
+            <div class="section-header text-center section-header--dark" data-aos="zoom-in" data-aos-duration="800">
                 <h2>Our Popular Courses</h2>
                 <p class="style2">Minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. duis enim velit
                     mollit.
                     Exercitation veniam consequat.</p>
             </div>
-            <div class="course__wrapper">
+            <div class="course__wrapper" data-aos="fade-up" data-aos-duration="800">
                 <div class="course__slider swiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
@@ -394,18 +393,19 @@
 
 
     <!-- ===============>> Team section start here <<================= -->
-    <section class="team  team--style1 padding-top padding-bottom" data-aos="fade-up" data-aos-duration="800">
-        <div class="container">
+    <section class="team  team--style1 padding-bottom padding-top" >
+        <div class="container" data-aos="fade-up" data-aos-duration="800">
             <div class="team__wrapper">
                 <div class="row g-4">
                     <div class="col-md-6 col-sm-12">
-                        <div class="section-header">
+                        <div class="team__header" data-aos="fade-right" data-aos-duration="1000">
                             <h2>Meet Our Expert</h2>
                             <p class="style3">Clarity gives you the blocks & components you needto create a truly
-                                professional website, landing page or admin panel for your saas components you needto
-                                create a truly</p>
+                                professional website, landing page or admin panel for your saas
+                                components you needto create a truly </p>
+                            <a href="mentor.html" class="trk-btn trk-btn--rounded trk-btn--secondary1">All
+                                Memebers</a>
                         </div>
-                        <a href="mentor.html" class="trk-btn trk-btn--rounded trk-btn--secondary1">See All Memebers</a>
                     </div>
                     <div class="col-lg-3 col-sm-6">
                         <div class="team__item">
@@ -415,7 +415,7 @@
                                 </div>
                                 <div class="team__item-content team__item-content--style1">
                                     <div class="team__item-author">
-                                        <h6><a href="#">Jenny Wilson</a> </h6>
+                                        <h6><a href="mentor-details.html">Jenny Wilson</a> </h6>
                                         <p>UI Designer</p>
                                     </div>
                                 </div>
@@ -430,7 +430,7 @@
                                 </div>
                                 <div class="team__item-content team__item-content--style1">
                                     <div class="team__item-author">
-                                        <h6><a href="#">Robert Fox</a> </h6>
+                                        <h6><a href="mentor-details.html">Robert Fox</a> </h6>
                                         <p>Product Designer</p>
                                     </div>
                                 </div>
@@ -446,7 +446,7 @@
                                 </div>
                                 <div class="team__item-content team__item-content--style1">
                                     <div class="team__item-author">
-                                        <h6><a href="#">Devon Lane</a> </h6>
+                                        <h6><a href="mentor-details.html">Devon Lane</a> </h6>
                                         <p>Web developer</p>
                                     </div>
                                 </div>
@@ -461,7 +461,7 @@
                                 </div>
                                 <div class="team__item-content team__item-content--style1">
                                     <div class="team__item-author">
-                                        <h6><a href="#">Jerome Bell</a> </h6>
+                                        <h6><a href="mentor-details.html">Jerome Bell</a> </h6>
                                         <p>Marketer</p>
                                     </div>
                                 </div>
@@ -476,7 +476,7 @@
                                 </div>
                                 <div class="team__item-content team__item-content--style1">
                                     <div class="team__item-author">
-                                        <h6><a href="#">Marvin McKi</a> </h6>
+                                        <h6><a href="mentor-details.html">Marvin McKi</a> </h6>
                                         <p>UX Designer</p>
                                     </div>
                                 </div>
@@ -491,7 +491,7 @@
                                 </div>
                                 <div class="team__item-content team__item-content--style1">
                                     <div class="team__item-author">
-                                        <h6><a href="#">Darrell Bell</a> </h6>
+                                        <h6><a href="mentor-details.html">Darrell Bell</a> </h6>
                                         <p>Graphic Designer</p>
                                     </div>
                                 </div>
@@ -510,7 +510,7 @@
 
     <!-- ===============>> Testimonial section start here <<================= -->
     <section class="testimonial testimonial--style1 padding-top padding-bottom brand-1 mb-5">
-        <div class="container">
+        <div class="container" data-aos="fade-up" data-aos-duration="800">
             <div class="section-header text-center section-header--dark">
                 <h2>What Clients Have to Say About Us</h2>
                 <p class="style2">Interdum et malesuada fames ac ante ipsum</p>
@@ -620,31 +620,31 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <div class="testimonial__author-thumb">
-                                <img src="assets/images/testimonial/home1/1.png" alt="author" />
+                                <img src="assets/images/testimonial/home1/1.png" alt="author">
                             </div>
 
                         </div>
                         <div class="swiper-slide">
                             <div class="testimonial__author-thumb">
-                                <img src="assets/images/testimonial/home1/2.png" alt="author" />
+                                <img src="assets/images/testimonial/home1/2.png" alt="author">
                             </div>
 
                         </div>
                         <div class="swiper-slide">
                             <div class="testimonial__author-thumb">
-                                <img src="assets/images/testimonial/home1/3.png" alt="author" />
+                                <img src="assets/images/testimonial/home1/3.png" alt="author">
                             </div>
 
                         </div>
                         <div class="swiper-slide">
                             <div class="testimonial__author-thumb">
-                                <img src="assets/images/testimonial/home1/4.png" alt="author" />
+                                <img src="assets/images/testimonial/home1/4.png" alt="author">
                             </div>
 
                         </div>
                         <div class="swiper-slide">
                             <div class="testimonial__author-thumb">
-                                <img src="assets/images/testimonial/home1/5.png" alt="author" />
+                                <img src="assets/images/testimonial/home1/5.png" alt="author">
                             </div>
 
                         </div>
@@ -668,7 +668,7 @@
                         <h2>Get free Pro memberships for
                             your high school class</h2>
 
-                        <a href="#" class="trk-btn trk-btn--rounded trk-btn--primary1">Join With Us</a>
+                        <a href="signin.html" class="trk-btn trk-btn--rounded trk-btn--primary1">Join With Us</a>
                     </div>
                 </div>
             </div>
