--- a/blog-details.html
+++ b/blog-details.html
@@ -140,9 +140,7 @@
                                 <div class="blog__item">
                                     <div class="blog__inner">
                                         <div class="blog__thumb">
-                                            <img src="assets/images/blog/home3/details/1.png" alt="blog-images" />
-                                            <!-- <span class="date"><i class="fa-solid fa-calendar-days"></i> 21 april
-                                                    2022</span> -->
+                                            <img src="assets/images/blog/home3/details/1.png" alt="blog-images">
                                         </div>
                                         <div class="blog__content">
                                             <div class="blog__meta">
@@ -435,7 +433,7 @@
                                                         <div class="comment">
                                                             <div class="thumb">
                                                                 <img src="assets/images/blog/home3/details/5.png"
-                                                                    alt="comment-author" />
+                                                                    alt="comment-author">
                                                             </div>
                                                             <div class="content">
                                                                 <div class="content__top">
@@ -461,7 +459,7 @@
                                                                         <div class="comment comment--reply">
                                                                             <div class="thumb">
                                                                                 <img src="assets/images/blog/home3/details/6.png"
-                                                                                    alt="comment-author" />
+                                                                                    alt="comment-author">
                                                                             </div>
                                                                             <div class="content">
                                                                                 <div class="content__top">
@@ -499,7 +497,7 @@
                                                         <div class="comment">
                                                             <div class="thumb">
                                                                 <img src="assets/images/blog/home3/details/7.png"
-                                                                    alt="comment-author" />
+                                                                    alt="comment-author">
                                                             </div>
                                                             <div class="content">
                                                                 <div class="content__top">
@@ -559,7 +557,7 @@
                                                         </div>
                                                     </div>
                                                     <button type="submit"
-                                                        class="trk-btn trk-btn--rounded trk-btn--secondary1 mt-4">Submit
+                                                        class="trk-btn trk-btn--rounded trk-btn--secondary1 mt-5">Submit
                                                         Now</button>
                                                 </form>
                                             </div>
@@ -590,7 +588,7 @@
                         <h2>Get free Pro memberships for
                             your high school class</h2>
 
-                        <a href="#" class="trk-btn trk-btn--rounded trk-btn--primary1">Join With Us</a>
+                        <a href="signin.html" class="trk-btn trk-btn--rounded trk-btn--primary1">Join With Us</a>
                     </div>
                 </div>
             </div>
