--- a/cart.html
+++ b/cart.html
@@ -110,15 +110,17 @@
 
 
 
+
+
     <!-- ==========Page Header Section Starts Here========== -->
-    <div class="pageheader" style="background-image:url(assets/images/bg/home1/9.png)">
+    <div class="pageheader" style="background-image:url(assets/images/bg/home1/2.png)">
         <div class="container">
             <div class="pageheader__content">
-                <h2>Login</h2>
+                <h2>Course</h2>
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">Login</li>
+                        <li class="breadcrumb-item active" aria-current="page">Course</li>
                     </ol>
                 </nav>
             </div>
@@ -128,97 +130,97 @@
 
 
 
-    <!-- ===============>> account start here <<================= -->
-    <section class="account padding-top padding-bottom">
-        <div class="container-fluid">
-            <div class="account__wrapper" data-aos="fade-up" data-aos-duration="800">
-                <div class="row g-4">
-                    <div class="col-lg-12">
-                        <div class="account__content">
-                            <!-- account tittle -->
-                            <div class="account__header">
-                                <h3>Log in to your account</h3>
-                                <p>Welcome back! Please enter your details.</p>
-                            </div>
-                            <!-- account form -->
-                            <form action="#" class="account__form needs-validation" novalidate>
-                                <div class="row g-4">
-                                    <div class="col-lg-12">
-                                        <div class="input-group">
-                                            <input type="email" class="form-control" id="account-email"
-                                                placeholder="Enter your email" required>
-                                            <div class="valid-tooltip">
-                                                This email is valid
-                                            </div>
-                                            <div class="invalid-tooltip">
-                                                Please enter a valid email
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-12">
-                                        <div class="input-group">
-                                            <input type="password" class="form-control showhide-pass" id="account-pass"
-                                                placeholder="Password" required>
 
-                                            <button type="button" id="btnToggle" class="toggle"><i id="eyeIcon"
-                                                    class="fa fa-eye"></i></button>
-                                            <div class="valid-tooltip">
-                                                Looks good!
-                                            </div>
-                                            <div class="invalid-tooltip">
-                                                Enter a strong password
+    <!-- ==========Cart Section start Here========== -->
+    <div class="cart padding-top padding-bottom">
+        <div class="container">
+            <div class="col-lg-8">
+                <div class="cart__info">
+                    <!-- Shopping Cart-->
+                    <div class="table-responsive shopping-cart">
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th>Product Name</th>
+                                    <th class="text-center">Quantity</th>
+                                    <th class="text-center">Subtotal</th>
+                                    <th class="text-center">Discount</th>
+                                    <th class="text-center"><a class="btn btn-sm btn-outline-danger" href="#">Clear
+                                            Cart</a></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>
+                                        <div class="product-item">
+                                            <a class="product-thumb" href="#"><img
+                                                    src="https://www.bootdey.com/image/220x180/FF0000/000000"
+                                                    alt="Product"></a>
+                                            <div class="product-info">
+                                                <h4 class="product-title"><a href="#">Unionbay Park</a></h4>
+                                                <span><em>Size:</em> 10.5</span><span><em>Color:</em> Dark
+                                                    Blue</span>
                                             </div>
                                         </div>
-                                    </div>
-                                </div>
+                                    </td>
+                                    <td class="text-center">
+                                        <div class="count-input">
+                                            <select class="form-control">
+                                                <option>1</option>
+                                                <option>2</option>
+                                                <option>3</option>
+                                                <option>4</option>
+                                                <option>5</option>
+                                            </select>
+                                        </div>
+                                    </td>
+                                    <td class="text-center text-lg text-medium">$43.90</td>
+                                    <td class="text-center text-lg text-medium">$18.00</td>
+                                    <td class="text-center"><a class="remove-from-cart" href="#" data-toggle="tooltip"
+                                            title="" data-original-title="Remove item"><i class="fa fa-trash"></i></a>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4"></div>
+        </div>
+    </div>
+    </div>
+    <!-- ==========Cart Section Ends Here========== -->
 
-                                <div class="account__form-passcheck">
-                                    <div class="form-check">
-                                        <input type="checkbox" class="form-check-input" value="" id="terms-check">
-                                        <label for="terms-check" class="form-check-label">
-                                            Remember for 30 days
-                                        </label>
-                                    </div>
-                                    <div class="account__form-forgotpass">
-                                        <a href="forgot-pass.html">Forgot Password?</a>
-                                    </div>
-                                </div>
 
-                                <button type="submit"
-                                    class="trk-btn trk-btn--border trk-btn--secondary1 d-block mt-4">Sign in</button>
-                            </form>
-                            <!-- account social -->
-                            <div class="account__social">
-                                <a href="#" class="account__social-btn"><span><img src="assets/images/others/google.svg"
-                                            alt="google icon"></span>
-                                    Sign in with google
-                                </a>
-                            </div>
 
-                            <div class="account__switch">
-                                <p>Don't have an account? <a href="signup.html">Sign up</a></p>
-                            </div>
-                        </div>
+
+
+
+
+    <!-- ===============>> newsletter start here <<================= -->
+    <div class="newsletter" data-aos="fade-up" data-aos-duration="800">
+        <div class="container">
+            <div class="newsletter__wrapper">
+                <div class="newsletter__content">
+                    <div class="newsletter__content-inner newsletter__content-inner--style1 text-center"
+                        style="background-image:url(assets/images/footer/2.png)">
+                        <h2>Get free Pro memberships for
+                            your high school class</h2>
+
+                        <a href="signin.html" class="trk-btn trk-btn--rounded trk-btn--primary1">Join With Us</a>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
-    <!-- ===============>> account end here <<================= -->
-
-
-
-
-
-
-
+    </div>
+    <!-- ===============>> newsletter end here <<================= -->
 
 
     <!-- ===============>> footer start here <<================= -->
     <footer class="footer brand-1" style="background-image:url(assets/images/footer/1.png)">
         <div class="container">
             <div class="footer__wrapper">
-                <div class="footer__top padding-top padding-bottom ">
+                <div class="footer__top footer__top--style1 padding-bottom ">
                     <div class="row g-5">
                         <div class="col-xl-4 col-md-6">
                             <div class="footer__about">
@@ -369,7 +371,7 @@
 
 
     <!-- scrollToTop start here -->
-    <!-- <a href="#" class="scrollToTop"><i class="fa-solid fa-arrow-up-from-bracket"></i></a> -->
+    <a href="#" class="scrollToTop scrollToTop--home1"><i class="fa-solid fa-arrow-up-from-bracket"></i></a>
     <!-- scrollToTop ending here -->
 
 
