--- a/contact.html
+++ b/contact.html
@@ -132,7 +132,7 @@
         <div class="container">
             <div class="contact__wrapper">
                 <div class="row g-5">
-                    <div class="col-lg-6">
+                    <div class="col-lg-6" data-aos="fade-right" data-aos-duration="800">
                         <div class="cotact__details">
                             <div class="contact__header">
                                 <h3>Always Here to Help you</h3>
@@ -154,7 +154,7 @@
                                 </div>
                                 <div class="contact__item">
                                     <div class="contact__item-thumb">
-                                        <span><i class="fa-solid fa-location-dot"></i></span>
+                                        <span><i class="fa-solid fa-phone"></i></span>
                                     </div>
                                     <div class="contact__item-content">
                                         <h5>Contact</h5>
@@ -164,7 +164,7 @@
                                 </div>
                                 <div class="contact__item">
                                     <div class="contact__item-thumb">
-                                        <span><i class="fa-solid fa-location-dot"></i></span>
+                                        <span><i class="fa-solid fa-envelope"></i></span>
                                     </div>
                                     <div class="contact__item-content">
                                         <h5>Email</h5>
@@ -173,7 +173,7 @@
                                 </div>
                                 <div class="contact__item">
                                     <div class="contact__item-thumb">
-                                        <span><i class="fa-solid fa-location-dot"></i></span>
+                                        <span><i class="fa-solid fa-clock"></i></span>
                                     </div>
                                     <div class="contact__item-content">
                                         <h5>Hours of operation</h5>
@@ -185,14 +185,14 @@
                         </div>
 
                     </div>
-                    <div class="col-lg-6">
-                        <div class="contact__form">
+                    <div class="col-lg-6" data-aos="fade-left" data-aos-duration="800">
+                        <div class="contact__form"> 
+                            <h3>Ready To Get Started?</h3>
+                            <p>You email address will not be published. Required fields are marked.</p>
                             <!-- account form -->
                             <form action="#" class="account__form">
                                 <div class="row g-4">
                                     <div class="col-lg-12">
-                                        <label for="account-name" class="form-label">Full
-                                            Name</label>
                                         <div class="input-group">
                                             <input type="text" class="form-control" id="account-name"
                                                 placeholder="Jhon Doe" required>
@@ -205,8 +205,6 @@
                                         </div>
                                     </div>
                                     <div class="col-lg-12">
-                                        <label for="account-email" class="form-label">Email
-                                            Address *</label>
                                         <div class="input-group">
                                             <input type="email" class="form-control" id="account-email"
                                                 placeholder="Email" required>
@@ -219,9 +217,8 @@
                                         </div>
                                     </div>
                                     <div class="col-lg-12">
-                                        <label for="account-mobile" class="form-label">Mobile *</label>
                                         <div class="input-group">
-                                            <input type="mobile" class="form-control" id="account-mobile"
+                                            <input type="number" class="form-control" id="account-mobile"
                                                 placeholder="Enter number" required>
                                             <div class="valid-tooltip">
                                                 This mobile is valid
@@ -233,7 +230,6 @@
                                     </div>
 
                                     <div class="col-lg-12">
-                                        <label for="account-pass" class="form-label">Password *</label>
                                         <div class="input-group">
                                             <textarea id="account-desc" class="form-control" rows="4"
                                                 placeholder="Write a message..." cols="50"></textarea>
@@ -250,13 +246,9 @@
                                                 policy</a>.
                                         </label>
                                     </div>
-                                    <!-- <div class="account__form-forgotpass">
-                                        <a href="#">Forgot Password?</a>
-                                    </div> -->
                                 </div>
 
-                                <button type="submit" class="trk-btn trk-btn--rounded trk-btn--secondary1">Sign
-                                    Up</button>
+                                <button type="submit" class="trk-btn trk-btn--rounded trk-btn--secondary1">Send Message</button>
                             </form>
                         </div>
                     </div>
@@ -271,12 +263,12 @@
 
     <!-- ==========location map start Here========== -->
     <div class="contact padding-bottom">
-        <div class="container">
+        <div class="container" data-aos="fade-up" data-aos-duration="800">
             <div class="contact__map">
                 <div class="mapouter">
-                    <div class="gmap_canvas"><iframe width="100%" height="510" id="gmap_canvas" class="map"
+                    <div class="gmap_canvas"><iframe id="gmap_canvas" class="map"
                             src="https://maps.google.com/maps?q=california&t=&z=10&ie=UTF8&iwloc=&output=embed"
-                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                            ></iframe>
                     </div>
                 </div>
             </div>
@@ -301,7 +293,7 @@
                         <h2>Get free Pro memberships for
                             your high school class</h2>
 
-                        <a href="#" class="trk-btn trk-btn--rounded trk-btn--primary1">Join With Us</a>
+                        <a href="signin.html" class="trk-btn trk-btn--rounded trk-btn--primary1">Join With Us</a>
                     </div>
                 </div>
             </div>
