--- a/course-details.html
+++ b/course-details.html
@@ -180,44 +180,57 @@
                             <p>Become a Full-Stack Web Developer with just ONE Course. HTML,CSS,Javascript,
                                 Node,React, MongoBD, Web3 and DApps</p>
                             <div class="coursedetails__focus">
-                                <span class="star"> 4.5 <i class="fa-solid fa-star"></i><i
-                                        class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
-                                        class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></span>
-                                <span class="count">(237,732 ratings)</span>
-                                <span>10+ Student</span>
+                                <div class="coursedetails__focus-rating">
+                                    <span>4.5</span>
+                                </div>
+                                <div class="coursedetails__focus-star">
+                                    <ul>
+                                        <li><i class="fa-solid fa-star"></i></li>
+                                        <li><i class="fa-solid fa-star"></i></li>
+                                        <li><i class="fa-solid fa-star"></i></li>
+                                        <li><i class="fa-solid fa-star"></i></li>
+                                        <li><i class="fa-solid fa-star"></i></li>
+                                    </ul>
+                                </div>
+                                <div class="coursedetails__focus-count">
+                                    <span>(237,732 ratings)</span>
+                                </div>
+                                <div class="coursedetails__focus-students"> 
+                                    <span>10+ Student</span>
+                                </div>
                             </div>
 
                         </div>
                         <div class="coursedetails__info">
                             <ul class="nav nav-pills " id="pills-tab" role="tablist">
                                 <li class="nav-item active" role="presentation">
-                                    <a class="trk-btn active" id="pills-overview-tab" data-bs-toggle="pill"
-                                        data-bs-target="#pills-overview" type="button" role="tab"
+                                    <button class="trk-btn active" id="pills-overview-tab" data-bs-toggle="pill"
+                                        data-bs-target="#pills-overview" role="tab"
                                         aria-controls="pills-overview" aria-selected="true"><i
-                                            class="fa-solid fa-grip-vertical"></i> Overview</a>
+                                            class="fa-solid fa-grip-vertical"></i> Overview</button>
                                 </li>
                                 <li class="nav-item" role="presentation">
-                                    <a class="trk-btn" id="pills-curriculum-tab" data-bs-toggle="pill"
-                                        data-bs-target="#pills-curriculum" type="button" role="tab"
+                                    <button class="trk-btn" id="pills-curriculum-tab" data-bs-toggle="pill"
+                                        data-bs-target="#pills-curriculum" role="tab"
                                         aria-controls="pills-curriculum" aria-selected="false"><i
-                                            class="fa-solid fa-file"></i> Curriculum</a>
+                                            class="fa-solid fa-file"></i> Curriculum</button>
                                 </li>
                                 <li class="nav-item" role="presentation">
-                                    <a class="trk-btn" id="pills-instructor-tab" data-bs-toggle="pill"
-                                        data-bs-target="#pills-instructor" type="button" role="tab"
+                                    <button class="trk-btn" id="pills-instructor-tab" data-bs-toggle="pill"
+                                        data-bs-target="#pills-instructor" role="tab"
                                         aria-controls="pills-instructor" aria-selected="false"><i
-                                            class="fa-solid fa-user"></i> Instructor</a>
+                                            class="fa-solid fa-user"></i> Instructor</button>
                                 </li>
                                 <li class="nav-item" role="presentation">
-                                    <a class="trk-btn" id="pills-reviews-tab" data-bs-toggle="pill"
-                                        data-bs-target="#pills-reviews" type="button" role="tab"
+                                    <button class="trk-btn" id="pills-reviews-tab" data-bs-toggle="pill"
+                                        data-bs-target="#pills-reviews" role="tab"
                                         aria-controls="pills-reviews" aria-selected="false"><i
-                                            class="fa-solid fa-star"></i> Reviews</a>
+                                            class="fa-solid fa-star"></i> Reviews</button>
                                 </li>
                                 <li class="nav-item" role="presentation">
-                                    <a class="trk-btn" id="pills-help-tab" data-bs-toggle="pill"
-                                        data-bs-target="#pills-help" type="button" role="tab" aria-controls="pills-help"
-                                        aria-selected="false"> <i class="fa-solid fa-phone"></i> Help</a>
+                                    <button class="trk-btn" id="pills-help-tab" data-bs-toggle="pill"
+                                        data-bs-target="#pills-help" role="tab" aria-controls="pills-help"
+                                        aria-selected="false"> <i class="fa-solid fa-phone"></i> Help</button>
                                 </li>
                             </ul>
                             <div class="tab-content" id="pills-tabContent">
@@ -769,7 +782,7 @@
 
     <!-- ===============>> Mentor details section start here <<================= -->
     <section class="team team--details padding-top">
-        <div class="container" data-aos="fade-up" data-aos-duration="800">
+        <div class="container" data-aos="fade-up" data-aos-duration="600">
             <div class="section-header">
                 <h3>Instructor</h3>
             </div>
@@ -815,7 +828,7 @@
 
     <!-- ===============>>Student Reviews section start here <<================= -->
     <section class="studentreview padding-top">
-        <div class="container" data-aos="fade-up" data-aos-duration="800">
+        <div class="container" data-aos="fade-up" data-aos-duration="600">
             <div class="section-header">
                 <h3>Real Review</h3>
                 <p class="mute">Here's what our students have to say about their experience with Designership.</p>
@@ -831,7 +844,7 @@
                                             src="assets/images/testimonial/home1/review/1.png" alt="review Images">
                                         <div class="studentreview__thumb-top">
                                             <img src="assets/images/testimonial/home1/review/Logo.png" alt="icon">
-                                            <p>Julian Testi...</p>
+                                            <p>Murphy Kesti...</p>
                                         </div>
                                         <div class="studentreview__thumb-playbtn">
                                             <a href="https://www.youtube.com/embed/hAP2QF--2Dg" data-fslightbox><img
@@ -842,7 +855,7 @@
 
                                     <div class="studentreview__item-author">
                                         <h6>Kathryn Murphy</h6>
-                                        <span>Web Developer</span>
+                                        <span>Graphic Desinger</span>
                                     </div>
                                 </div>
                             </div>
@@ -855,7 +868,7 @@
                                             src="assets/images/testimonial/home1/review/2.png" alt="review Images">
                                         <div class="studentreview__thumb-top">
                                             <img src="assets/images/testimonial/home1/review/Logo.png" alt="icon">
-                                            <p>Julian Testi...</p>
+                                            <p>Ralph Testi...</p>
                                         </div>
                                         <div class="studentreview__thumb-playbtn">
                                             <a href="https://www.youtube.com/embed/hAP2QF--2Dg" data-fslightbox><img
@@ -879,7 +892,7 @@
                                             src="assets/images/testimonial/home1/review/3.png" alt="review Images">
                                         <div class="studentreview__thumb-top">
                                             <img src="assets/images/testimonial/home1/review/Logo.png" alt="icon">
-                                            <p>Julian Testi...</p>
+                                            <p>Wilson ley...</p>
                                         </div>
                                         <div class="studentreview__thumb-playbtn">
                                             <a href="https://www.youtube.com/embed/hAP2QF--2Dg" data-fslightbox><img
@@ -928,11 +941,11 @@
 
 
     <!-- ===============>> Popular course section start here <<================= -->
-    <section class="course course--style1 padding-top padding-bottom">
-        <div class="container" data-aos="fade-up" data-aos-duration="800">
+    <section class="course course--style1 padding-top">
+        <div class="container" data-aos="fade-up" data-aos-duration="500">
             <div class="section-header">
                 <h2>Some More Courses For You</h2>
-            </div>
+            </div> 
             <div class="course__wrapper">
                 <div class="course__slider swiper">
                     <div class="swiper-wrapper">
@@ -1081,7 +1094,7 @@
                         <h2>Get free Pro memberships for
                             your high school class</h2>
 
-                        <a href="#" class="trk-btn trk-btn--rounded trk-btn--primary1">Join With Us</a>
+                        <a href="signin.html" class="trk-btn trk-btn--rounded trk-btn--primary1">Join With Us</a>
                     </div>
                 </div>
             </div>
