--- a/courses.html
+++ b/courses.html
@@ -147,34 +147,37 @@
                 <div class="course__topbar-right" data-aos="fade-left" data-aos-duration="800">
                     <ul class="nav nav-pills" id="pills-tab" role="tablist">
                         <li class="nav-item" role="presentation">
-                            <a class="tab-btn active" id="pills-english-tab" data-bs-toggle="pill"
+                            <!-- <a class="tab-btn active" id="pills-english-tab" data-bs-toggle="pill"
                                 data-bs-target="#pills-english" type="button" role="tab" aria-controls="pills-english"
-                                aria-selected="true">English</a>
+                                aria-selected="true">English</a> -->
+                            <button class="tab-btn active" id="pills-english-tab" data-bs-toggle="pill"
+                                data-bs-target="#pills-english" role="tab" aria-controls="pills-english"
+                                aria-selected="true">English</button> 
                         </li>
                         <li class="nav-item" role="presentation">
-                            <a class="tab-btn" id="pills-data-tab" data-bs-toggle="pill" data-bs-target="#pills-data"
-                                type="button" role="tab" aria-controls="pills-data" aria-selected="false">Data
-                                Science</a>
+                            <button class="tab-btn" id="pills-data-tab" data-bs-toggle="pill" data-bs-target="#pills-data"
+                             role="tab" aria-controls="pills-data" aria-selected="false">Data
+                                Science</button>
                         </li>
                         <li class="nav-item" role="presentation">
-                            <a class="tab-btn" id="pills-content-tab" data-bs-toggle="pill"
-                                data-bs-target="#pills-content" type="button" role="tab" aria-controls="pills-content"
-                                aria-selected="false">Content Writing</a>
+                            <button class="tab-btn" id="pills-content-tab" data-bs-toggle="pill"
+                                data-bs-target="#pills-content" role="tab" aria-controls="pills-content"
+                                aria-selected="false">Content Writing</button>
                         </li>
                         <li class="nav-item" role="presentation">
-                            <a class="tab-btn" id="pills-development-tab" data-bs-toggle="pill"
-                                data-bs-target="#pills-development" type="button" role="tab"
-                                aria-controls="pills-development" aria-selected="false">Development</a>
+                            <button class="tab-btn" id="pills-development-tab" data-bs-toggle="pill"
+                                data-bs-target="#pills-development" role="tab"
+                                aria-controls="pills-development" aria-selected="false">Development</button>
                         </li>
                         <li class="nav-item" role="presentation">
-                            <a class="tab-btn" id="pills-art-tab" data-bs-toggle="pill" data-bs-target="#pills-art"
-                                type="button" role="tab" aria-controls="pills-art" aria-selected="false">Art &
-                                Design</a>
+                            <button class="tab-btn" id="pills-art-tab" data-bs-toggle="pill" data-bs-target="#pills-art"
+                             role="tab" aria-controls="pills-art" aria-selected="false">Art &
+                                Design</button>
                         </li>
                         <li class="nav-item" role="presentation">
-                            <a class="tab-btn" id="pills-management-tab" data-bs-toggle="pill"
-                                data-bs-target="#pills-management" type="button" role="tab"
-                                aria-controls="pills-management" aria-selected="false">Management</a>
+                            <button class="tab-btn" id="pills-management-tab" data-bs-toggle="pill"
+                                data-bs-target="#pills-management" role="tab"
+                                aria-controls="pills-management" aria-selected="false">Management</button>
                         </li>
                     </ul>
                 </div>
@@ -1505,10 +1508,9 @@
             </div>
         </div>
     </div>
-    </div>
     <!-- ==========Courses Section Ends Here========== -->
 
-
+ 
 
 
 
@@ -1524,7 +1526,7 @@
                         <h2>Get free Pro memberships for
                             your high school class</h2>
 
-                        <a href="#" class="trk-btn trk-btn--rounded trk-btn--primary1">Join With Us</a>
+                        <a href="signin.html" class="trk-btn trk-btn--rounded trk-btn--primary1">Join With Us</a>
                     </div>
                 </div>
             </div>
