--- a/index-2.html
+++ b/index-2.html
@@ -225,7 +225,7 @@
 
 
     <!-- ===============>> Course categories start here <<================= -->
-    <div class="categories categories--style2 padding-top padding-bottom" >
+    <div class="categories categories--style2 padding-top padding-bottom">
         <div class="container" data-aos="fade-up" data-aos-duration="800">
             <div class="section-header text-center">
                 <div class="subtitle subtitle--style2 justify-content-center">
@@ -372,7 +372,7 @@
 
 
     <!-- ===============>> Popular course section start here <<================= -->
-    <section class="course course--style2 padding-top padding-bottom brand2-bg-4" >
+    <section class="course course--style2 padding-top padding-bottom brand2-bg-4">
         <div class="container" data-aos="fade-up" data-aos-duration="800">
             <div class="section-header text-center">
                 <div class="subtitle subtitle--style2 justify-content-center">
@@ -562,10 +562,10 @@
 
     <!-- ===============>> counter start here <<================= -->
     <div class="counter counter--style1 bg--cover" style="background-image:url(assets/images/counter/home2/bg.png)">
-        <div class="container" >
+        <div class="container">
             <div class="counter__wrapper">
                 <div class="row g-5">
-                    <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-duration="400">
+                    <div class="col-md-3 col-sm-6" data-aos="fade-up" data-aos-duration="400">
                         <div class="counter__item">
                             <div class="counter__item-inner">
                                 <div class="counter__item-thumb">
@@ -579,7 +579,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-duration="600">
+                    <div class="col-md-3 col-sm-6" data-aos="fade-up" data-aos-duration="600">
                         <div class="counter__item">
                             <div class="counter__item-inner">
                                 <div class="counter__item-thumb">
@@ -593,7 +593,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-duration="800">
+                    <div class="col-md-3 col-sm-6" data-aos="fade-up" data-aos-duration="800">
                         <div class="counter__item">
                             <div class="counter__item-inner">
                                 <div class="counter__item-thumb">
@@ -607,7 +607,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-sm-6" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="col-md-3 col-sm-6" data-aos="fade-up" data-aos-duration="1000">
                         <div class="counter__item">
                             <div class="counter__item-inner">
                                 <div class="counter__item-thumb">
@@ -903,52 +903,52 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-3 col-lg-6 col-sm-6" data-aos="fade-up" data-aos-duration="900" <div
-                        class="team__item">
-                        <div class="team__item-inner">
-                            <div class="team__item-thumb">
-                                <img src="assets/images/team/home1/6.png" alt="Team Image">
-                            </div>
-                            <div class="team__item-content team__item-content--style2">
-                                <div class="team__item-author">
-                                    <h6><a href="mentor-details.html">Darrell Bell</a> </h6>
-                                    <p class="mb-0">Graphic Designer</p>
-                                    <ul class="social social--style2 mt-2 justify-content-center">
-                                        <li class="social__item">
-                                            <a href="#" class="social__link social__link--defult"><i
-                                                    class="fab fa-facebook-f"></i></a>
-                                        </li>
-                                        <li class="social__item">
-                                            <a href="#" class="social__link social__link--defult"><i
-                                                    class="fab fa-instagram"></i></a>
-                                        </li>
-                                        <li class="social__item">
-                                            <a href="#" class="social__link social__link--defult"><i
-                                                    class="fab fa-youtube"></i></a>
-                                        </li>
-                                        <li class="social__item">
-                                            <a href="signin.html" class="social__link social__link--defult"><i
-                                                    class="fab fa-twitter"></i></a>
-                                        </li>
-                                    </ul>
+                    <div class="col-xl-3 col-lg-6 col-sm-6" data-aos="fade-up" data-aos-duration="900">
+                        <div class="team__item">
+                            <div class="team__item-inner">
+                                <div class="team__item-thumb">
+                                    <img src="assets/images/team/home1/6.png" alt="Team Image">
+                                </div>
+                                <div class="team__item-content team__item-content--style2">
+                                    <div class="team__item-author">
+                                        <h6><a href="mentor-details.html">Darrell Bell</a> </h6>
+                                        <p class="mb-0">Graphic Designer</p>
+                                        <ul class="social social--style2 mt-2 justify-content-center">
+                                            <li class="social__item">
+                                                <a href="#" class="social__link social__link--defult"><i
+                                                        class="fab fa-facebook-f"></i></a>
+                                            </li>
+                                            <li class="social__item">
+                                                <a href="#" class="social__link social__link--defult"><i
+                                                        class="fab fa-instagram"></i></a>
+                                            </li>
+                                            <li class="social__item">
+                                                <a href="#" class="social__link social__link--defult"><i
+                                                        class="fab fa-youtube"></i></a>
+                                            </li>
+                                            <li class="social__item">
+                                                <a href="signin.html" class="social__link social__link--defult"><i
+                                                        class="fab fa-twitter"></i></a>
+                                            </li>
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+                <div class="text-center">
+                    <a href="mentor.html" class="trk-btn trk-btn--border trk-btn--primary2 mt-5">Expert Mentor
+                        <span><i class="fa-solid fa-arrow-right"></i></span> </a>
+                </div>
             </div>
-            <div class="text-center">
-                <a href="mentor.html" class="trk-btn trk-btn--border trk-btn--primary2 mt-5">Expert Mentor
-                    <span><i class="fa-solid fa-arrow-right"></i></span> </a>
-            </div>
-        </div>
         </div>
     </section>
     <!-- ===============>> Team section end here <<================= -->
 
 
     <!-- ===============>> Blog section start here <<================= -->
-    <section class="blog blog--style2 padding-top padding-bottom" >
+    <section class="blog blog--style2 padding-top padding-bottom">
         <div class="container" data-aos="fade-up" data-aos-duration="800">
             <div class="blog__header">
                 <h2>Everything you need to know about development</h2>
