--- a/index-3.html
+++ b/index-3.html
@@ -31,6 +31,10 @@
     <!-- ===============>> Preloader end here <<================= -->
 
 
+
+
+
+
     <!-- ===============>> Header section start here <<================= -->
     <header class="header-section home3">
         <div class="header-bottom">
@@ -112,6 +116,19 @@
 
 
 
+    <!-- <div class="search-toggle">
+        <button class="search-icon" aria-label="Search"><i class="fa fa-search"></i></button>
+        <div class="search-bar">
+            <form>
+                <input type="text" placeholder="Search...">
+                <button type="submit">Search</button>
+            </form>
+            <button class="close-icon" aria-label="Close"><i class="fa fa-times"></i></button>
+        </div>
+    </div> -->
+
+
+
     <!-- ===============>> Banner section start here <<================= -->
     <section class="banner padding-bottom banner--style3">
         <div class="container">
@@ -161,6 +178,10 @@
         </div>
     </section>
     <!-- ===============>> Banner section end here <<================= -->
+
+
+
+
 
 
 
@@ -413,37 +434,42 @@
             <div class="course__wrapper">
                 <ul class="nav nav-pills" id="pills-tab" role="tablist">
                     <li class="nav-item" role="presentation">
-                        <a class="tab-btn active" id="pills-web-tab" data-bs-toggle="pill" data-bs-target="#pills-web"
-                            type="button" role="tab" aria-controls="pills-web" aria-selected="true">Web Design</a>
+                        <button class="tab-btn active" id="pills-web-tab" data-bs-toggle="pill"
+                            data-bs-target="#pills-web" role="tab" aria-controls="pills-web" aria-selected="true">Web
+                            Design</button>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <a class="tab-btn" id="pills-graphic-tab" data-bs-toggle="pill" data-bs-target="#pills-graphic"
-                            type="button" role="tab" aria-controls="pills-graphic" aria-selected="false">Graphic
-                            Design</a>
+                        <button class="tab-btn" id="pills-graphic-tab" data-bs-toggle="pill"
+                            data-bs-target="#pills-graphic" role="tab" aria-controls="pills-graphic"
+                            aria-selected="false">Graphic
+                            Design</button>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <a class="tab-btn" id="pills-marketing-tab" data-bs-toggle="pill"
-                            data-bs-target="#pills-marketing" type="button" role="tab" aria-controls="pills-marketing"
-                            aria-selected="false">Digital marketing</a>
+                        <button class="tab-btn" id="pills-marketing-tab" data-bs-toggle="pill"
+                            data-bs-target="#pills-marketing" role="tab" aria-controls="pills-marketing"
+                            aria-selected="false">Digital marketing</button>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <a class="tab-btn" id="pills-content-tab" data-bs-toggle="pill" data-bs-target="#pills-content"
-                            type="button" role="tab" aria-controls="pills-content" aria-selected="false">Content
-                            writing</a>
+                        <button class="tab-btn" id="pills-content-tab" data-bs-toggle="pill"
+                            data-bs-target="#pills-content" role="tab" aria-controls="pills-content"
+                            aria-selected="false">Content
+                            writing</button>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <a class="tab-btn" id="pills-finance-tab" data-bs-toggle="pill" data-bs-target="#pills-finance"
-                            type="button" role="tab" aria-controls="pills-finance" aria-selected="false">Finance</a>
+                        <button class="tab-btn" id="pills-finance-tab" data-bs-toggle="pill"
+                            data-bs-target="#pills-finance" role="tab" aria-controls="pills-finance"
+                            aria-selected="false">Finance</button>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <a class="tab-btn" id="pills-health-tab" data-bs-toggle="pill" data-bs-target="#pills-health"
-                            type="button" role="tab" aria-controls="pills-health" aria-selected="false">Health &
-                            Fitness</a>
+                        <button class="tab-btn" id="pills-health-tab" data-bs-toggle="pill"
+                            data-bs-target="#pills-health" role="tab" aria-controls="pills-health"
+                            aria-selected="false">Health &
+                            Fitness</button>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <a class="tab-btn" id="pills-business-tab" data-bs-toggle="pill"
-                            data-bs-target="#pills-business" type="button" role="tab" aria-controls="pills-business"
-                            aria-selected="false">Business</a>
+                        <button class="tab-btn" id="pills-business-tab" data-bs-toggle="pill"
+                            data-bs-target="#pills-business" role="tab" aria-controls="pills-business"
+                            aria-selected="false">Business</button>
                     </li>
                 </ul>
                 <div class="tab-content" id="pills-tabContent">
@@ -2175,7 +2201,7 @@
 
 
     <!-- ===============>> Testimonial section start here <<================= -->
-    <section class="testimonial testimonial--style3 padding-top padding-bottom brand3-bg-1" >
+    <section class="testimonial testimonial--style3 padding-top padding-bottom brand3-bg-1">
         <div class="container" data-aos="fade-up" data-aos-duration="800">
             <div class="section-header text-center">
                 <h2>Loved by Our Students</h2>
@@ -2185,7 +2211,7 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <div class="row g-5 align-items-center">
-                                <div class="col-lg-6 col-md-6">
+                                <div class="col-md-6">
                                     <div class="testimonial__item">
                                         <div class="testimonial__item-inner">
                                             <div class="testimonial__content">
@@ -2211,7 +2237,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-6 col-md-6">
+                                <div class="col-md-6">
                                     <div class="testimonial__item">
                                         <div class="testimonial__item-inner">
                                             <div class="testimonial__thumb">
@@ -2232,13 +2258,13 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="row g-5 align-items-center">
-                                <div class="col-lg-6">
+                                <div class="col-md-6">
                                     <div class="testimonial__item">
                                         <div class="testimonial__item-inner">
                                             <div class="testimonial__content">
                                                 <div class="testimonial__writer">
-                                                    <h5>Brooklyn Simmons</h5>
-                                                    <p>UI/UX Designer</p>
+                                                    <h5>Annette Black</h5>
+                                                    <p>Web Designer</p>
                                                     <span><i class="fa-solid fa-star"></i><i
                                                             class="fa-solid fa-star"></i><i
                                                             class="fa-solid fa-star"></i><i
@@ -2258,7 +2284,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-6">
+                                <div class="col-md-6">
                                     <div class="testimonial__item">
                                         <div class="testimonial__item-inner">
                                             <div class="testimonial__thumb">
@@ -2279,13 +2305,13 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="row g-5 align-items-center">
-                                <div class="col-lg-6">
+                                <div class="col-md-6">
                                     <div class="testimonial__item">
                                         <div class="testimonial__item-inner">
                                             <div class="testimonial__content">
                                                 <div class="testimonial__writer">
-                                                    <h5>Brooklyn Simmons</h5>
-                                                    <p>UI/UX Designer</p>
+                                                    <h5>Brooklyn lye</h5>
+                                                    <p>Software Developer</p>
                                                     <span><i class="fa-solid fa-star"></i><i
                                                             class="fa-solid fa-star"></i><i
                                                             class="fa-solid fa-star"></i><i
@@ -2305,7 +2331,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-6">
+                                <div class="col-md-6">
                                     <div class="testimonial__item">
                                         <div class="testimonial__item-inner">
                                             <div class="testimonial__thumb">
@@ -2326,13 +2352,13 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="row g-5 align-items-center">
-                                <div class="col-lg-6">
+                                <div class="col-md-6">
                                     <div class="testimonial__item">
                                         <div class="testimonial__item-inner">
                                             <div class="testimonial__content">
                                                 <div class="testimonial__writer">
-                                                    <h5>Brooklyn Simmons</h5>
-                                                    <p>UI/UX Designer</p>
+                                                    <h5>Simmons Dev</h5>
+                                                    <p>Graphic Designer</p>
                                                     <span><i class="fa-solid fa-star"></i><i
                                                             class="fa-solid fa-star"></i><i
                                                             class="fa-solid fa-star"></i><i
@@ -2352,7 +2378,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-6">
+                                <div class="col-md-6">
                                     <div class="testimonial__item">
                                         <div class="testimonial__item-inner">
                                             <div class="testimonial__thumb">
@@ -2378,7 +2404,7 @@
                         <div class="swiper-slide">
                             <div class="testimonial__storyteller">
                                 <div class="testimonial__storyteller-thumb">
-                                    <img src="assets/images/testimonial/home3/2.png" alt="storyteller" />
+                                    <img src="assets/images/testimonial/home3/2.png" alt="storyteller">
                                 </div>
                                 <div class="testimonial__storyteller-content">
                                     <h6>Annette Black</h6>
@@ -2389,7 +2415,7 @@
                         <div class="swiper-slide">
                             <div class="testimonial__storyteller">
                                 <div class="testimonial__storyteller-thumb">
-                                    <img src="assets/images/testimonial/home3/3.png" alt="storyteller" />
+                                    <img src="assets/images/testimonial/home3/3.png" alt="storyteller">
                                 </div>
                                 <div class="testimonial__storyteller-content">
                                     <h6>Annette Black</h6>
@@ -2400,7 +2426,7 @@
                         <div class="swiper-slide">
                             <div class="testimonial__storyteller">
                                 <div class="testimonial__storyteller-thumb">
-                                    <img src="assets/images/testimonial/home3/4.png" alt="storyteller" />
+                                    <img src="assets/images/testimonial/home3/4.png" alt="storyteller">
                                 </div>
                                 <div class="testimonial__storyteller-content">
                                     <h6>Annette Black</h6>
@@ -2411,7 +2437,7 @@
                         <div class="swiper-slide">
                             <div class="testimonial__storyteller">
                                 <div class="testimonial__storyteller-thumb">
-                                    <img src="assets/images/testimonial/home3/5.png" alt="storyteller" />
+                                    <img src="assets/images/testimonial/home3/5.png" alt="storyteller">
                                 </div>
                                 <div class="testimonial__storyteller-content">
                                     <h6>Annette Black</h6>
@@ -2658,7 +2684,7 @@
                                         <li>
                                             <div class="thumb">
                                                 <a href="blog-sing.html"><img src="assets/images/footer/home3/1.png"
-                                                        alt="recentpost" /></a>
+                                                        alt="recentpost"></a>
                                             </div>
                                             <div class="content">
                                                 <p><a href="blog-single.html">Employe
@@ -2670,7 +2696,7 @@
                                         <li>
                                             <div class="thumb">
                                                 <a href="blog-sing.html"><img src="assets/images/footer/home3/2.png"
-                                                        alt="recentpost" /></a>
+                                                        alt="recentpost"></a>
                                             </div>
                                             <div class="content">
                                                 <p><a href="blog-single.html">Should fixing
