--- a/index-4.html
+++ b/index-4.html
@@ -440,7 +440,7 @@
         style="background-image: url(assets/images/bg/home4/2.png);" data-aos="fade-up" data-aos-duration="800">
         <div class="container" data-aos="fade-up" data-aos-duration="800">
             <div class="team__wrapper">
-                <div class="row g-4 text-center">
+                <div class="row g-4">
                     <div class="col-lg-6 col-sm-12" data-aos="fade-right" data-aos-duration="800">
                         <div class="team__header">
                             <h2 class="style2-h2">Meet Our Expert</h2>
