--- a/mentor-details.html
+++ b/mentor-details.html
@@ -332,10 +332,10 @@
                 <div class="newsletter__content">
                     <div class="newsletter__content-inner newsletter__content-inner--style1 text-center"
                         style="background-image:url(assets/images/footer/2.png)">
-                        <h2>Get free Pro memberships for
-                            your high school class</h2>
+                        <h2>How can I get free Pro memberships for mentors?</h2>
 
-                        <a href="#" class="trk-btn trk-btn--rounded trk-btn--primary1">Join With Us</a>
+                        <a href="signin.html" class="trk-btn trk-btn--rounded trk-btn--primary1">Join With Us</a>
+                        
                     </div>
                 </div>
             </div>
