--- a/forgot-pass.html
+++ b/forgot-pass.html
@@ -132,7 +132,7 @@
     <!-- ===============>> account start here <<================= -->
     <section class="account padding-top padding-bottom">
         <div class="container-fluid">
-            <div class="account__wrapper">
+            <div class="account__wrapper" data-aos="fade-up" data-aos-duration="800">
                 <div class="row g-4">
                     <div class="col-lg-12">
                         <div class="account__content">
@@ -145,10 +145,9 @@
                             <form action="#" class="account__form">
                                 <div class="row g-4">
                                     <div class="col-lg-12">
-                                        <label for="account-email" class="form-label">Email Address *</label>
                                         <div class="input-group">
                                             <input type="email" class="form-control" id="account-email"
-                                                placeholder="Email" required>
+                                                placeholder="Enter  email" required>
                                             <div class="valid-tooltip">
                                                 This email is valid
                                             </div>
