--- a/mentor.html
+++ b/mentor.html
@@ -128,8 +128,8 @@
 
 
     <!-- ===============>> Team section start here <<================= -->
-    <section class="team team--style1 padding-top  padding-bottom" data-aos="fade-up" data-aos-duration="800">
-        <div class="container">
+    <section class="team team--style1 padding-top  padding-bottom">
+        <div class="container"  data-aos="fade-up" data-aos-duration="800">
             <div class="section-header text-center">
                 <h2>Meet the Expert Creator</h2>
             </div>
@@ -349,16 +349,15 @@
 
 
     <!-- ===============>> newsletter start here <<================= -->
-    <div class="newsletter" data-aos="fade-up" data-aos-duration="800">
-        <div class="container">
+    <div class="newsletter" >
+        <div class="container" data-aos="fade-up" data-aos-duration="800">
             <div class="newsletter__wrapper">
                 <div class="newsletter__content">
                     <div class="newsletter__content-inner newsletter__content-inner--style1 text-center"
                         style="background-image:url(assets/images/footer/2.png)">
-                        <h2>Get free Pro memberships for
-                            your high school class</h2>
+                        <h2>How can I get free Pro memberships for mentors?</h2>
 
-                        <a href="#" class="trk-btn trk-btn--rounded trk-btn--primary1">Join With Us</a>
+                        <a href="signin.html" class="trk-btn trk-btn--rounded trk-btn--primary1">Join With Us</a>
                     </div>
                 </div>
             </div>
