--- a/signup.html
+++ b/signup.html
@@ -133,23 +133,22 @@
     <!-- ===============>> account start here <<================= -->
     <section class="account padding-top padding-bottom">
         <div class="container-fluid">
-            <div class="account__wrapper">
+            <div class="account__wrapper" data-aos="fade-up" data-aos-duration="800">
                 <div class="row g-4">
                     <div class="col-lg-12">
                         <div class="account__content">
                             <!-- account tittle -->
                             <div class="account__header">
                                 <h3>Create an account</h3>
-                                <p>Welcome back! Please enter your details.</p>
+                                <p>Start your 30-day free trail.</p>
                             </div>
                             <!-- account form -->
                             <form action="#" class="account__form">
                                 <div class="row g-4">
                                     <div class="col-lg-12">
-                                        <label for="account-name" class="form-label">Full Name</label>
                                         <div class="input-group">
                                             <input type="text" class="form-control" id="account-name"
-                                                placeholder="Jhon Doe" required>
+                                                placeholder="Enter name" required>
                                             <div class="valid-tooltip">
                                                 Looks good!
                                             </div>
@@ -159,10 +158,9 @@
                                         </div>
                                     </div>
                                     <div class="col-lg-12">
-                                        <label for="account-email" class="form-label">Email Address *</label>
                                         <div class="input-group">
                                             <input type="email" class="form-control" id="account-email"
-                                                placeholder="Email" required>
+                                                placeholder="Enter email" required>
                                             <div class="valid-tooltip">
                                                 This email is valid
                                             </div>
@@ -172,9 +170,8 @@
                                         </div>
                                     </div>
                                     <div class="col-lg-12">
-                                        <label for="account-mobile" class="form-label">Mobile *</label>
                                         <div class="input-group">
-                                            <input type="mobile" class="form-control" id="account-mobile"
+                                            <input type="number" class="form-control" id="account-mobile"
                                                 placeholder="Enter number" required>
                                             <div class="valid-tooltip">
                                                 This mobile is valid
@@ -186,7 +183,6 @@
                                     </div>
 
                                     <div class="col-lg-12">
-                                        <label for="account-pass" class="form-label">Password *</label>
                                         <div class="input-group">
                                             <!-- <span class="input-group-icon"><i
                                                     class="fa-solid fa-eye"></i></span> -->
@@ -209,7 +205,7 @@
                                     <div class="form-check">
                                         <input type="checkbox" class="form-check-input" value="" id="terms-check">
                                         <label for="terms-check" class="form-check-label">
-                                            By creating an account you agree to our <a href="#"> terms & conditions</a>
+                                            Agree to our <a href="#"> terms & conditions</a>
                                         </label>
                                     </div>
                                     <!-- <div class="account__form-forgotpass">
@@ -229,7 +225,7 @@
                             </div>
 
                             <div class="account__switch">
-                                <p>Already have an account? <a href="signin.html">Sign in</a></p>
+                                <p>Already have an account? <a href="signin.html">Log in</a></p>
                             </div>
                         </div>
                     </div>
